--- a/教育機器學習期末.ipynb
+++ b/教育機器學習期末.ipynb
@@ -168,22 +168,19 @@
         "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from sklearn.preprocessing import LabelEncoder\n",
         "\n",
-        "# 設定圖表風格\n",
+     
         "sns.set(style=\"whitegrid\")\n",
         "\n",
-        "# ---------------------------------------------------------\n",
-        "# 1. 資料載入與前處理\n",
-        "# ---------------------------------------------------------\n",
+
         "print(\"正在載入資料...\")\n",
-        "# 注意：UCI 的這個 CSV 使用分號 ';' 作為分隔符號，而非逗號\n",
+     
         "df = pd.read_csv('student-mat.csv', sep=';')\n",
         "\n",
-        "# 檢查是否有缺失值\n",
+
         "print(f\"資料集大小: {df.shape}\")\n",
         "print(f\"缺失值數量: {df.isnull().sum().sum()}\")\n",
         "\n",
-        "# 將非數值的類別資料 (如 'yes'/'no', 'F'/'M') 轉換為數值，以便模型分析\n",
-        "# 使用 Label Encoding 簡單處理\n",
+
         "label_encoders = {}\n",
         "for column in df.select_dtypes(include=['object']).columns:\n",
         "    le = LabelEncoder()\n",
@@ -193,9 +190,7 @@
         "print(\"資料前處理完成。\")\n",
         "print(\"-\" * 30)\n",
         "\n",
-        "# ---------------------------------------------------------\n",
-        "# 2. 資料探索 (EDA) - 產出關聯性熱圖\n",
-        "# ---------------------------------------------------------\n",
+
         "plt.figure(figsize=(12, 10))\n",
         "# 計算相關係數矩陣\n",
         "correlation_matrix = df.corr()\n",
@@ -203,7 +198,7 @@
         "sns.heatmap(correlation_matrix[['G3']].sort_values(by='G3', ascending=False),\n",
         "            annot=True, cmap='coolwarm', vmin=-1, vmax=1)\n",
         "plt.title('Feature Correlation with Final Grade (G3)')\n",
-        "plt.savefig('correlation_heatmap.png') # 儲存圖片供報告使用\n",
+        "plt.savefig('correlation_heatmap.png') 
         "print(\"已儲存相關性分析圖表: correlation_heatmap.png\")\n",
         "#\n",
         "\n",
@@ -216,7 +211,7 @@
         "df['passed'] = df['G3'].apply(lambda x: 1 if x >= 10 else 0)\n",
         "\n",
         "# 特徵選擇：移除成績欄位 (G1, G2, G3) 避免資料洩漏，我們想用行為預測結果\n",
-        "# 如果你想保留 G1, G2 來預測 G3，可以把下方 drop 中的 G1, G2 拿掉\n",
+        "
         "X = df.drop(['G1', 'G2', 'G3', 'passed'], axis=1)\n",
         "y = df['passed']\n",
         "\n",
